--- a/Habits/Info.plist
+++ b/Habits/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSRemindersUsageDescription</key>
+	<string>&quot;Please accept to enable reminders&quot;</string>
 </dict>
 </plist>
